Make changes needed for Activity 1

--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>    
-    <title>About your name</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-  </head>  
-  <body>
-    <header>
-       <!— replace this line with an <h1> element that contains your first and last name ->
-    </header>    
-    <main> 
-	   <!- Edit the following line so that the filename and alt element use your image and name. ->
-	   <img src="images/starkey.jpg"  alt="V. Starkey">
-       <!— Replace these linse with 2 or 3 paragraphs about yourself. One of those paragraphs should
-	       describe any experience you have with web development. ->
-    </main>    
-    <footer>
-       <!- replace this line with the copyright symbol followed by the words Fall 2020 ->
-    </footer>  
-  </body>
+	<head>
+		<title>About Alan Fleming</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="images/favicon.ico">
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/main.css">
+    </head>
+	<body>
+		<header>
+			<h1>Alan Fleming</h1>
+		</header>
+		<main>
+			<img src="images/Alan.png"	alt="Alan Fleming">
+			<p>I am currently a student at Wright state university. My degree will in computer science and cyber security analytics. I do; however, have experience making websites using html due to my highschool capstone project. Using my degree I plan on going into either software development or information technology. Hopefully I will work with a focus on computer networking and cyber-security as I find the subject enjoyable.</p>
+			<p>My hobbies include, working on computers, playing videogames, reading books, and print making. I became intested in these hobbies back in my first few years of grade school. My interest in computers is even what lead me towards my current career path. Due to this, I have my hobbies aline with my job in the future</p>
+		</main>
+		<footer>
+			<p>&#169; Fall 2020</p>
+		</footer>
+	</body>
 </html>
