Swapped code for copy to make it more readable

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<p>My hobbies include, working on computers, playing videogames, reading books, and print making. I became intested in these hobbies back in my first few years of grade school. My interest in computers is even what lead me towards my current career path. Due to this, I have my hobbies aline with my job in the future</p>
 		</main>
 		<footer>
-			<p>&#169; Fall 2020</p>
+			<p>&copy; Fall 2020</p>
 		</footer>
 	</body>
 </html>
