--- a/fleming/index.html
+++ b/fleming/index.html
@@ -21,13 +21,13 @@
 					</a>
 				</li>
 				<li>
-					<a href="course_pages/CEG-2400-01.html">CEG-2400-01</a>
+					<a href="course_pages/ceg_2400_01.html">CEG-2400-01</a>
 				</li>
 				<li>
-					<a href="course_pages/EES-2510-90.html">EES-2510-90</a>
+					<a href="course_pages/ees_2510_90.html">EES-2510-90</a>
 				</li>
 				<li>
-					<a href="course_pages/CS-4370-01.html">CS-4370-01</a>
+					<a href="course_pages/cs_4370_01.html">CS-4370-01</a>
 				</li>
 			</ul>
 		</nav>
