--- a/fleming/course_pages/ees_2510_90.html
+++ b/fleming/course_pages/ees_2510_90.html
@@ -22,13 +22,13 @@
 					</a>
 				</li>
 				<li>
-					<a href="CEG-2400-01.html">CEG-2400-01</a>
+					<a href="ceg_2400_01.html">CEG-2400-01</a>
 				</li>
 				<li>
-					<a href="EES-2510-90.html">EES-2510-90</a>
+					<a href="ees_2510_90.html">EES-2510-90</a>
 				</li>
 				<li>
-					<a href="CS-4370-01.html">CS-4370-01</a>
+					<a href="cs_4370_01.html">CS-4370-01</a>
 				</li>
 			</ul>
 		</nav>
