--- a/fleming/index.html
+++ b/fleming/index.html
@@ -33,7 +33,7 @@
 		</nav>
 
 		<main>
-			<img src="images/Alan.png"	alt="Alan Fleming">
+			<img src="images/alan.png"	alt="Alan Fleming">
 			<p>I am currently a student at Wright state university. My degree will in computer science and cyber security analytics. I do; however, have experience making websites using html due to my highschool capstone project. Using my degree I plan on going into either software development or information technology. Hopefully I will work with a focus on computer networking and cyber-security as I find the subject enjoyable.</p>
 			<p>My hobbies include, working on computers, playing videogames, reading books, and print making. I became intested in these hobbies back in my first few years of grade school. My interest in computers is even what lead me towards my current career path. Due to this, I have my hobbies aline with my job in the future</p>
 		</main>
