--- a/fleming/course_pages/cs_4370_01.html
+++ b/fleming/course_pages/cs_4370_01.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" href="../images/favicon.ico">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="../css/normalize.css">
+		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	
 	<body>
@@ -28,13 +28,13 @@
 					<a href="ees_2510_90.html">EES-2510-90</a>
 				</li>
 				<li>
-					<a href="cs_4370_01.html">CS-4370-01</a>
+					<a href="cs_4370_01.html" id="current">CS-4370-01</a>
 				</li>
 			</ul>
 		</nav>
 
 		<main>
-			<p>This course covers how to use graphical processing units (GPU) to more effeciently impliment computer algorithms.</p>
+			<h2>This course covers how to use graphical processing units (GPU) to more effeciently impliment computer algorithms.</h2>
 		</main>
 
 		<footer>
