--- a/fleming/course_pages/ees_2510_90.html
+++ b/fleming/course_pages/ees_2510_90.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" href="../images/favicon.ico">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="../css/normalize.css">
+		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	
 	<body>
@@ -25,7 +25,7 @@
 					<a href="ceg_2400_01.html">CEG-2400-01</a>
 				</li>
 				<li>
-					<a href="ees_2510_90.html">EES-2510-90</a>
+					<a href="ees_2510_90.html" id="current">EES-2510-90</a>
 				</li>
 				<li>
 					<a href="cs_4370_01.html">CS-4370-01</a>
@@ -34,7 +34,7 @@
 		</nav>
 
 		<main>
-			<p>This course covers the internal and external geological processes that shape planet earth; as well as the water cycle</p>
+			<h2>This course covers the internal and external geological processes that shape planet earth; as well as the water cycle</h2>
 		</main>
 
 		<footer>
